Reads edge is no more enough, also requires edge is now needed.